--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Cantina Chichilo de Buenos Aires</title>
         <meta name="keywords" content="cantina chichilo,restaurante en argentina,cantina en buenos aires,comida informal,fusiles,TIRAMISU,CARACOLES,RANAS,CORDERO PATAGONICO,BROCOLIS,ARROZ CON LECHE,MEJILLONES,MONDONGO,RABAS,GAMBAS,LENTEJAS">
         <meta name="description" content="Somos una cantina establecida en Buenos Aires por 62 aÃ±os">
-        <link rel="stylesheet" type="text/css" href="css/cantina.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <header>
@@ -46,27 +46,21 @@
                     </div>
 
                     <div class="grid-img">
-                        <img src="img/foto-del-flan-2012.jpg" alt="FLAN CASERO">
-                        <img src="img/agustin.jpg" alt="AGUSTIN COMIENDO CARACOLES A LA BORDALEZA JUNTO A SUS PADRES Y ABUELOS">
-                        <img src="img/IMG-20190614-WA0010.jpg" alt="RANAS A LA PROVENZAL Y CARACOLES A LA BORDALEZA" >
-                        <img src="img/clientecaracoles2024.jpg" alt="CLIENTE COMIENDO CARACOLES A LA BORDALEZA">
-                        <img src="img/DSC03004_small2.JPG" alt="DSC03004.JPG (157046 bytes)">
-                        <img src="img/20181201_204639_small.jpg" alt="noquis">
-                        <img src="img/MOSTRADOR_CON_LA_PICADA_ITALIANA-2014_small.jpg" alt="MOSTRADOR CON LA PICADA ITALIANA-2014.jpg (329223 bytes)">
-                        <img src="img/MOSTRADOR_CON_LA_PICADA_ITALIANA013_small.jpg" alt="MOSTRADOR CON LA PICADA ITALIANA013.jpg (336691 bytes)">
-                        <img src="img/MOSTRADOR_CON_LA_PICADA_ITALIANA-3015_small.jpg" alt="MOSTRADOR CON LA PICADA ITALIANA-3015.jpg (411233 bytes)" >
-                        <img src="img/MOSTRADOR_PICADA_ITALIAN021_small.jpg" alt="MOSTRADOR PICADA ITALIAN021.jpg (341311 bytes)" >
-                        <img alt="CLIENTA COMIENDO CARACOLES" src="img/P1000757.JPG">
-                        <img alt="POSTRE MATEO" src="img/FOTO-DE-POSTRE-MATEO_small.jpg">
-                        <img alt="EL FLAN CASERO MIXTO DE PURO HUEVO" src="img/IMG_20190112_130206_551.jpg">
-                        <img alt="POSTRE CHICHOLINA" src="img/CHICHOLINA-POSTRE.jpg">
-                        <img alt="" src="img/DSC00731_small1.JPG">
-                        <img alt="NUESTRAS ENTRADAS CASERAS ITALIANA" src="img/IMG_20181201_205117_779.jpg">
-                        <img alt="LA PAELLA DE CHICHILO" src="img/IMG_20180922_111203_459.jpg">
-                        <img alt="NUESTROS SORRENTINOS CASEROS DE MUZARELLA Y JAMON" src="img/IMG_20181013_130822_125.jpg">
-                        <img alt="AMASANDO LOS FUSILES AL FIERRITO" src="img/IMG_20190104_144457_299.jpg">
-                        <img alt="NUESTRO SALON" src="img/IMG_20171126_162849_089.jpg">
-                        <img alt="KINOTOS EN ALMIBAR CASEROS" src="img/IMG_20181012_235206_339.jpg">
+                        <img src="imagenes/foto-del-flan-2012.jpg" alt="FLAN CASERO">
+                        <img src="imagenes/agustin.jpg" alt="AGUSTIN COMIENDO CARACOLES A LA BORDALEZA JUNTO A SUS PADRES Y ABUELOS">
+                        <img src="imagenes/IMG-20190614-WA0010.jpg" alt="RANAS A LA PROVENZAL Y CARACOLES A LA BORDALEZA" >
+                        <img src="imagenes/clientecaracoles2024.jpg" alt="CLIENTE COMIENDO CARACOLES A LA BORDALEZA">
+                        <img src="imagenes/DSC03004_small2.jpg" alt="DSC03004.JPG (157046 bytes)">
+                        <img src="imagenes/MOSTRADOR_CON_LA_PICADA_ITALIANA-2014_small.jpg" alt="MOSTRADOR CON LA PICADA ITALIANA-2014.jpg (329223 bytes)">
+                        <img src="imagenes/MOSTRADOR_CON_LA_PICADA_ITALIANA013_small.jpg" alt="MOSTRADOR CON LA PICADA ITALIANA013.jpg (336691 bytes)">
+                        <img src="imagenes/MOSTRADOR_CON_LA_PICADA_ITALIANA-3015_small.jpg" alt="MOSTRADOR CON LA PICADA ITALIANA-3015.jpg (411233 bytes)" >
+                        <img alt="CLIENTA COMIENDO CARACOLES" src="imagenes/P1000757.jpg>
+                        <img alt="POSTRE MATEO" src="imagenes/FOTO DE POSTRE MATEO_small.jpg">
+                        <img alt="EL FLAN CASERO MIXTO DE PURO HUEVO" src="imagenes/IMG_20190112_130206_551.jpg">
+                        <img alt="POSTRE CHICHOLINA" src="imagenes/CHICHOLINA POSTRE.jpg">
+                        <img alt="" src="imagenes/DSC00731_small1.jpg">
+                        <img alt="LA PAELLA DE CHICHILO" src="imagenes/IMG_20180922_111203_459.jpg">
+                        <img alt="NUESTRO SALON" src="imagenes/IMG_20171126_162849_089.jpg">
 
                     </div>
                 </div>
